# packman-rs

./: Cargo.toml  LICENSE  README.md  build.sh  index.html  resize_logo.py  style.css
.agent/workflows/: deploy_to_azure.md
.github/workflows/: azure-static-web-apps-gentle-smoke-0c63c7410.yml  azure-static-web-apps-green-moss-0393d7f10.yml  azure-static-web-apps-lemon-forest-03c867e10.yml
api/: package.json
api/scores/: index.js
pkg/: pacman_rs.d.ts  pacman_rs.js  pacman_rs_bg.wasm
src/: game.rs  lib.rs
